# readme-of-dyn

./: ATG_VLA_three_modules_engineering_deployment_zh.md  README.md
Realworld-Pi_dyn1/: .gitignore  README.md  pyproject.toml
Realworld-Pi_dyn1/configs/: atg_vla.yaml  smoke_yuanxingball.yaml
Realworld-Pi_dyn1/docs/: cache_schema.md
Realworld-Pi_dyn1/scripts/: 00_make_pair_index.py  00_prepare_raw_from_lerobot.py  01_cache_pi05_chunks.py  02_extract_basic_features.py  03_train_dynamic_tokenizer.py  04_export_teacher_cache.py  05_train_puma_lite_predictor.py  06_export_h_hat_tau_cache.py  07_train_correction_head.py  07_train_current_correction_baseline.py
Realworld-Pi_dyn1/src/realworld_pi_dyn/: __init__.py  audit.py  config.py  data.py  factory.py  features.py  models.py  openpi_bridge.py  runtime.py  train_utils.py
Realworld-Pi_dyn1/tests/: test_shapes.py
Realworld-Pi_dyn_libero/: .gitignore  README.md  pyproject.toml
Realworld-Pi_dyn_libero/configs/: atg_vla.yaml
Realworld-Pi_dyn_libero/docs/: cache_schema.md
Realworld-Pi_dyn_libero/scripts/: 00_make_pair_index.py  00_prepare_raw_from_lerobot.py  00_prepare_raw_from_libero_hdf5.py  01_cache_pi05_chunks.py  02_extract_basic_features.py  03_train_dynamic_tokenizer.py  04_export_teacher_cache.py  05_train_puma_lite_predictor.py  06_export_h_hat_tau_cache.py  07_train_correction_head.py  07_train_current_correction_baseline.py  online_eval_libero_single_task.py  serve_pi05_libero_policy.py
Realworld-Pi_dyn_libero/src/libero_pi_dyn/: __init__.py  audit.py  (+7 more)
Realworld-Pi_dyn_libero/tests/: test_shapes.py
