[project]
name = "libero-pi-dyn"
version = "0.1.0"
description = "LIBERO ATG-VLA dynamic predictor and residual correction project for pi0.5."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.22.4,<2.0.0",
    "torch>=2.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "polars>=1.0.0",
    "opencv-python>=4.8.0",
    "h5py>=3.8.0",
    "imageio>=2.31.0",
    "websockets>=11.0",
    "msgpack>=1.0.5",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
